# FaxanaduRecomp

./: .gitignore  CMakeLists.txt  README.md  extras.c
.github/workflows/: release.yml
ghidra/faxanadu_nesrecomp.rep/: projectState
ghidra/faxanadu_nesrecomp.rep/idata/: ~index.bak  ~journal.bak
ghidra/faxanadu_nesrecomp.rep/idata/00/: 00000001.prp  00000002.prp  00000003.prp  00000004.prp  00000005.prp  00000006.prp  00000007.prp  00000008.prp  00000009.prp  0000000a.prp  0000000b.prp  0000000c.prp  0000000d.prp  0000000e.prp  0000000f.prp
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000001.db/: changeA.grf  changeB.grf  db.1.gbf  db.2.gbf  snapshotA.grf  snapshotB.grf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000002.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000003.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000004.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000005.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000006.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/00/~00000007.db/: db.1.gbf  db.2.gbf
ghidra/faxanadu_nesrecomp.rep/idata/01/: 00000011.prp
ghidra/faxanadu_nesrecomp.rep/user/: ~index.bak  ~journal.bak
ghidra/faxanadu_nesrecomp.rep/user/00/: 00000000.prp  00000002.prp  00000003.prp  00000004.prp  00000005.prp  00000006.prp  00000007.prp  00000008.prp  00000009.prp  0000000a.prp  0000000b.prp  0000000c.prp  0000000d.prp  0000000e.prp  0000000f.prp
ghidra/faxanadu_nesrecomp.rep/user/01/: 00000010.prp
(+35 files in other folders)
